Cleanup and add list of examples to readme